Fixed logo text changing its size depending on the screen size (unreadable text on small sizes)

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -18,9 +18,9 @@ ul {
   align-items: center;
 }
 
-.flex-container a p{
-font-size: 1.4vw;
-}
+// .flex-container a p{
+// font-size: 1.4vw;
+// }
 
 .active-link {
   color: var(--second-link-hover-color);
